[gd_scene load_steps=4 format=3 uid="uid://bkb8bcy8fluie"]

[ext_resource type="Script" uid="uid://jfkki6jlfw3b" path="res://Scripts/Lobby.gd" id="1_lobby"]
[ext_resource type="PackedScene" uid="uid://devfcw0o6bxon" path="res://Surprise/Scenes/high_level_ui.tscn" id="2_ui"]
[ext_resource type="Script" uid="uid://bfofg6ghoa6eg" path="res://Surprise/Scripts/highlevelnetworkhandler.gd" id="3_network"]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lobby")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.05, 0.1, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Planet Killer - Lobby"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="PlayerList" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PlayerListLabel" type="Label" parent="VBoxContainer/PlayerList"]
layout_mode = 2
text = "Players:"

[node name="PlayerListContainer" type="VBoxContainer" parent="VBoxContainer/PlayerList"]
layout_mode = 2
size_flags_vertical = 3

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="LobbyControls" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ReadyButton" type="Button" parent="VBoxContainer/LobbyControls"]
layout_mode = 2
size_flags_horizontal = 3
text = "Ready"

[node name="StartGameButton" type="Button" parent="VBoxContainer/LobbyControls"]
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Start Game"

[node name="LeaveLobbyButton" type="Button" parent="VBoxContainer/LobbyControls"]
layout_mode = 2
size_flags_horizontal = 3
text = "Leave Lobby"

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Waiting for players..."
horizontal_alignment = 1

[node name="NetworkHandler" type="Node" parent="."]
script = ExtResource("3_network")

[node name="MultiplayerUI" parent="." instance=ExtResource("2_ui")]
layout_mode = 1
script = null
